Updated jersey3 example under ./samples/server/petstore/jaxrs/jersey3