@@ -35,16 +35,17 @@ import jakarta.validation.Valid;
 @Tag(description = "the another-fake API", name = "")
 @jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen")
 public class AnotherFakeApi  {
+
    private final AnotherFakeApiService delegate;
 
    public AnotherFakeApi(@Context ServletConfig servletContext) {
-      AnotherFakeApiService delegate = null;
 
+      AnotherFakeApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("AnotherFakeApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (AnotherFakeApiService) Class.forName(implClass).newInstance();
+               delegate = (AnotherFakeApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -54,28 +55,17 @@ public class AnotherFakeApi  {
       if (delegate == null) {
          delegate = AnotherFakeApiServiceFactory.getAnotherFakeApi();
       }
-
       this.delegate = delegate;
    }
 
+
     @jakarta.ws.rs.PATCH
-    
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
-    @Operation(summary = "To test special tags", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Client.class))),
-            }
-    , tags={ "$another-fake?", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "To test special tags", notes = "To test special tags and operation ID starting with number", response = Client.class, tags={ "$another-fake?", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Client.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "To test special tags", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Client.class))),
+            }, tags={ "$another-fake?", }) 
     public Response call123testSpecialTags(@Schema(description = "client model", required = true) @NotNull @Valid  Client client,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.call123testSpecialTags(client, securityContext);
