@@ -35,16 +35,17 @@ import jakarta.validation.Valid;
 @Tag(description = "the foo API", name = "")
 @jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen")
 public class FooApi  {
+
    private final FooApiService delegate;
 
    public FooApi(@Context ServletConfig servletContext) {
-      FooApiService delegate = null;
 
+      FooApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("FooApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (FooApiService) Class.forName(implClass).newInstance();
+               delegate = (FooApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -54,28 +55,16 @@ public class FooApi  {
       if (delegate == null) {
          delegate = FooApiServiceFactory.getFooApi();
       }
-
       this.delegate = delegate;
    }
 
+
     @jakarta.ws.rs.GET
-    
-    
     @Produces({ "application/json" })
-    @Operation(summary = "", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "response", content = @Content(schema = @Schema(implementation = FooGetDefaultResponse.class))),
-            }
-    , tags={  }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "", notes = "", response = FooGetDefaultResponse.class, tags={  })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "response", response = FooGetDefaultResponse.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "response", content = 
+                @Content(schema = @Schema(implementation = FooGetDefaultResponse.class))),
+            }, tags={  }) 
     public Response fooGet(@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.fooGet(securityContext);
