@@ -36,16 +36,17 @@ import jakarta.validation.Valid;
 @Tag(description = "the store API", name = "")
 @jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen")
 public class StoreApi  {
+
    private final StoreApiService delegate;
 
    public StoreApi(@Context ServletConfig servletContext) {
-      StoreApiService delegate = null;
 
+      StoreApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("StoreApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (StoreApiService) Class.forName(implClass).newInstance();
+               delegate = (StoreApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -55,108 +56,61 @@ public class StoreApi  {
       if (delegate == null) {
          delegate = StoreApiServiceFactory.getStoreApi();
       }
-
       this.delegate = delegate;
    }
 
+
     @jakarta.ws.rs.DELETE
     @Path("/order/{order_id}")
-    
-    
-    @Operation(summary = "Delete purchase order by ID", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "400", description = "Invalid ID supplied", content = @Content(schema = @Schema(implementation = Void.class))),
-            @ApiResponse(responseCode = "404", description = "Order not found", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "store", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Delete purchase order by ID", notes = "For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors", response = Void.class, tags={ "store", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid ID supplied", response = Void.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 404, message = "Order not found", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Delete purchase order by ID", description = "", responses = {
+            @ApiResponse(responseCode = "400", description = "Invalid ID supplied", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            @ApiResponse(responseCode = "404", description = "Order not found", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "store", }) 
     public Response deleteOrder(@Schema(description= "ID of the order that needs to be deleted", required = true) @PathParam("order_id") @NotNull  String orderId,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.deleteOrder(orderId, securityContext);
     }
+
     @jakarta.ws.rs.GET
     @Path("/inventory")
-    
     @Produces({ "application/json" })
-    @Operation(summary = "Returns pet inventories by status", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Map.class))),
-            }
-    , tags={ "store", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Returns pet inventories by status", notes = "Returns a map of status codes to quantities", response = Integer.class, responseContainer = "Map", authorizations = {
-//        @io.swagger.annotations.Authorization(value = "api_key")
-//    }, tags={ "store", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Map.class, responseContainer = "Map")
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Returns pet inventories by status", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Map.class))),
+            }, tags={ "store", }) 
     public Response getInventory(@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.getInventory(securityContext);
     }
+
     @jakarta.ws.rs.GET
     @Path("/order/{order_id}")
-    
     @Produces({ "application/xml", "application/json" })
-    @Operation(summary = "Find purchase order by ID", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Order.class))),
-            @ApiResponse(responseCode = "400", description = "Invalid ID supplied", content = @Content(schema = @Schema(implementation = Void.class))),
-            @ApiResponse(responseCode = "404", description = "Order not found", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "store", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Find purchase order by ID", notes = "For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions", response = Order.class, tags={ "store", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Order.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid ID supplied", response = Void.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 404, message = "Order not found", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Find purchase order by ID", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Order.class))),
+            @ApiResponse(responseCode = "400", description = "Invalid ID supplied", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            @ApiResponse(responseCode = "404", description = "Order not found", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "store", }) 
     public Response getOrderById(@Schema(description= "ID of pet that needs to be fetched", required = true) @PathParam("order_id") @NotNull  @Min(1L) @Max(5L) Long orderId,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.getOrderById(orderId, securityContext);
     }
+
     @jakarta.ws.rs.POST
     @Path("/order")
     @Consumes({ "application/json" })
     @Produces({ "application/xml", "application/json" })
-    @Operation(summary = "Place an order for a pet", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Order.class))),
-            @ApiResponse(responseCode = "400", description = "Invalid Order", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "store", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Place an order for a pet", notes = "", response = Order.class, tags={ "store", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Order.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid Order", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Place an order for a pet", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Order.class))),
+            @ApiResponse(responseCode = "400", description = "Invalid Order", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "store", }) 
     public Response placeOrder(@Schema(description = "order placed for purchasing the pet", required = true) @NotNull @Valid  Order order,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.placeOrder(order, securityContext);
