@@ -36,16 +36,17 @@ import jakarta.validation.Valid;
 @Tag(description = "the user API", name = "")
 @jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen")
 public class UserApi  {
+
    private final UserApiService delegate;
 
    public UserApi(@Context ServletConfig servletContext) {
-      UserApiService delegate = null;
 
+      UserApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("UserApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (UserApiService) Class.forName(implClass).newInstance();
+               delegate = (UserApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -55,197 +56,108 @@ public class UserApi  {
       if (delegate == null) {
          delegate = UserApiServiceFactory.getUserApi();
       }
-
       this.delegate = delegate;
    }
 
+
     @jakarta.ws.rs.POST
-    
     @Consumes({ "application/json" })
-    
-    @Operation(summary = "Create user", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Create user", notes = "This can only be done by the logged in user.", response = Void.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Create user", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response createUser(@Schema(description = "Created user object", required = true) @NotNull @Valid  User user,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.createUser(user, securityContext);
     }
+
     @jakarta.ws.rs.POST
     @Path("/createWithArray")
     @Consumes({ "application/json" })
-    
-    @Operation(summary = "Creates list of users with given input array", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Creates list of users with given input array", notes = "", response = Void.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Creates list of users with given input array", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response createUsersWithArrayInput(@Schema(description = "List of user object", required = true) @NotNull @Valid  List<User> user,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.createUsersWithArrayInput(user, securityContext);
     }
+
     @jakarta.ws.rs.POST
     @Path("/createWithList")
     @Consumes({ "application/json" })
-    
-    @Operation(summary = "Creates list of users with given input array", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Creates list of users with given input array", notes = "", response = Void.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Creates list of users with given input array", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response createUsersWithListInput(@Schema(description = "List of user object", required = true) @NotNull @Valid  List<User> user,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.createUsersWithListInput(user, securityContext);
     }
+
     @jakarta.ws.rs.DELETE
     @Path("/{username}")
-    
-    
-    @Operation(summary = "Delete user", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "400", description = "Invalid username supplied", content = @Content(schema = @Schema(implementation = Void.class))),
-            @ApiResponse(responseCode = "404", description = "User not found", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Delete user", notes = "This can only be done by the logged in user.", response = Void.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid username supplied", response = Void.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 404, message = "User not found", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Delete user", description = "", responses = {
+            @ApiResponse(responseCode = "400", description = "Invalid username supplied", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            @ApiResponse(responseCode = "404", description = "User not found", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response deleteUser(@Schema(description= "The name that needs to be deleted", required = true) @PathParam("username") @NotNull  String username,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.deleteUser(username, securityContext);
     }
+
     @jakarta.ws.rs.GET
     @Path("/{username}")
-    
     @Produces({ "application/xml", "application/json" })
-    @Operation(summary = "Get user by user name", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = User.class))),
-            @ApiResponse(responseCode = "400", description = "Invalid username supplied", content = @Content(schema = @Schema(implementation = Void.class))),
-            @ApiResponse(responseCode = "404", description = "User not found", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Get user by user name", notes = "", response = User.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = User.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid username supplied", response = Void.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 404, message = "User not found", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Get user by user name", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = User.class))),
+            @ApiResponse(responseCode = "400", description = "Invalid username supplied", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            @ApiResponse(responseCode = "404", description = "User not found", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response getUserByName(@Schema(description= "The name that needs to be fetched. Use user1 for testing.", required = true) @PathParam("username") @NotNull  String username,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.getUserByName(username, securityContext);
     }
+
     @jakarta.ws.rs.GET
     @Path("/login")
-    
     @Produces({ "application/xml", "application/json" })
-    @Operation(summary = "Logs user into the system", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = String.class))),
-            @ApiResponse(responseCode = "400", description = "Invalid username/password supplied", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Logs user into the system", notes = "", response = String.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = String.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid username/password supplied", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
-    public Response loginUser(@Schema(description = "The user name for login", required = true) @QueryParam("username") @NotNull  String username,@Schema(description = "The password for login in clear text", required = true) @QueryParam("password") @NotNull  String password,@Context SecurityContext securityContext)
+    @Operation(summary = "Logs user into the system", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = String.class))),
+            @ApiResponse(responseCode = "400", description = "Invalid username/password supplied", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
+    public Response loginUser(@Schema(description = "The user name for login") @QueryParam("username") @NotNull  String username,@Schema(description = "The password for login in clear text") @QueryParam("password") @NotNull  String password,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.loginUser(username, password, securityContext);
     }
+
     @jakarta.ws.rs.GET
     @Path("/logout")
-    
-    
-    @Operation(summary = "Logs out current logged in user session", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Logs out current logged in user session", notes = "", response = Void.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Logs out current logged in user session", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "successful operation", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response logoutUser(@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.logoutUser(securityContext);
     }
+
     @jakarta.ws.rs.PUT
     @Path("/{username}")
     @Consumes({ "application/json" })
-    
-    @Operation(summary = "Updated user", description = "", 
-        responses = {
-            @ApiResponse(responseCode = "400", description = "Invalid user supplied", content = @Content(schema = @Schema(implementation = Void.class))),
-            @ApiResponse(responseCode = "404", description = "User not found", content = @Content(schema = @Schema(implementation = Void.class))),
-            }
-    , tags={ "user", }) 
-//    ==> Previous Swagger1 annotations <== RESOLVED WITH THE ABOVE FOR SWAGGER 2.X   
-//    @io.swagger.annotations.ApiOperation(value = "Updated user", notes = "This can only be done by the logged in user.", response = Void.class, tags={ "user", })
-//    @io.swagger.annotations.ApiResponses(value = {
-//        
-//        @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid user supplied", response = Void.class),
-//        
-//        @io.swagger.annotations.ApiResponse(code = 404, message = "User not found", response = Void.class)
-//        
-//    })
-//    ==> Previous Swagger1 annotations <== HOW TO DEAL WITH THIS PART?
-//    
+    @Operation(summary = "Updated user", description = "", responses = {
+            @ApiResponse(responseCode = "400", description = "Invalid user supplied", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            @ApiResponse(responseCode = "404", description = "User not found", content = 
+                @Content(schema = @Schema(implementation = Void.class))),
+            }, tags={ "user", }) 
     public Response updateUser(@Schema(description= "name that need to be deleted", required = true) @PathParam("username") @NotNull  String username,@Schema(description = "Updated user object", required = true) @NotNull @Valid  User user,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.updateUser(username, user, securityContext);
